--- a/index.html
+++ b/index.html
@@ -30,9 +30,10 @@
 		<article class="art">
 			<figure class="imagen-art"> 
 				<img src="img/destiny_mid_img4.jpg" />
+				<h2 class="cinta-art"><p>EXCLUSIVA</p></h2>
 			</figure>
 
-			<h2 class="cinta-art"><p>EXCLUSIVA</p></h2>
+			
 
 		<div>
 			<h2 class="titulo-art">DESTINY</h2>
@@ -41,7 +42,11 @@
 		<div class="texto">
 			<p>Destiny is an action game from the creators of Halo, set in a mysterious future. Create a unique and powerful character, customize the way you look and fight, and explore what remains of our solar system.  
 
+
 				por:<a href="#">Rogerio</a>
+
+				por:<a href="#">Rogerio cuervo</a>
+
 
 			</p>
 		</div>
