--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>Mi Primera App WEB</title>
+
+		<meta name="viewport" content="width=device-width, minimun-scale=1, maximun-scale=1" />
+
 		<link rel="stylesheet" href="css/normalize.css" />
 		<link rel="stylesheet" href="css/estilo.css" />
 	</head>
@@ -26,7 +29,19 @@
 			<li id="login"><a href="#">login</a></li>
 		</ul>
 	</nav>
-	<section id="contenido">
+		<!--etiqueta de video-->
+	<aside>
+		<video width="320" heigth="240" controls>
+			<source src="video/inFAMOUS Second Son - E3 Trailer (PS4)   E3 2013.ogv" type='video/ogg; codecs="theora, vorbis"'/>
+			<source src="video/inFAMOUS Second Son - E3 Trailer (PS4)   E3 2013.webm" type='video/webm' >
+			<source src="video/inFAMOUS Second Son - E3 Trailer (PS4)   E3 2013.mp4" type='video/mp4'>
+				<p> Actualiza tu Navegador</p>
+	</aside>
+	
+		</video>
+
+
+	<section id="contenido"><!--etiqueta de video-->
 		<article class="art">
 			<figure class="imagen-art"> 
 				<img src="img/destiny_mid_img4.jpg" />
@@ -45,13 +60,123 @@
 
 				por:<a href="#">Rogerio</a>
 
-				por:<a href="#">Rogerio cuervo</a>
+			</p>
+		</div>
 
+		</article>
+
+		<article class="art">
+			<figure class="imagen-art"> 
+				<img src="img/destiny_mid_img4.jpg" />
+				<h2 class="cinta-art"><p>EXCLUSIVA</p></h2>
+			</figure>
+
+			
+
+		<div>
+			<h2 class="titulo-art">DESTINY</h2>
+			<h2 class="titulo2-art">DESTINY LO NUEVO PARA PS4 Y XBOX ONE</h2>
+		</div>
+		<div class="texto">
+			<p>Destiny is an action game from the creators of Halo, set in a mysterious future. Create a unique and powerful character, customize the way you look and fight, and explore what remains of our solar system.  
+
+
+				por:<a href="#">Rogerio</a>
 
 			</p>
 		</div>
 
 		</article>
+		<article class="art">
+			<figure class="imagen-art"> 
+				<img src="img/destiny_mid_img4.jpg" />
+				<h2 class="cinta-art"><p>EXCLUSIVA</p></h2>
+			</figure>
+
+			
+
+		<div>
+			<h2 class="titulo-art">DESTINY</h2>
+			<h2 class="titulo2-art">DESTINY LO NUEVO PARA PS4 Y XBOX ONE</h2>
+		</div>
+		<div class="texto">
+			<p>Destiny is an action game from the creators of Halo, set in a mysterious future. Create a unique and powerful character, customize the way you look and fight, and explore what remains of our solar system.  
+
+
+				por:<a href="#">Rogerio</a>
+
+			</p>
+		</div>
+
+		</article>
+		<article class="art">
+			<figure class="imagen-art"> 
+				<img src="img/destiny_mid_img4.jpg" />
+				<h2 class="cinta-art"><p>EXCLUSIVA</p></h2>
+			</figure>
+
+			
+
+		<div>
+			<h2 class="titulo-art">DESTINY</h2>
+			<h2 class="titulo2-art">DESTINY LO NUEVO PARA PS4 Y XBOX ONE</h2>
+		</div>
+		<div class="texto">
+			<p>Destiny is an action game from the creators of Halo, set in a mysterious future. Create a unique and powerful character, customize the way you look and fight, and explore what remains of our solar system.  
+
+
+				por:<a href="#">Rogerio</a>
+
+			</p>
+		</div>
+
+		</article>
+		<article class="art">
+			<figure class="imagen-art"> 
+				<img src="img/destiny_mid_img4.jpg" />
+				<h2 class="cinta-art"><p>EXCLUSIVA</p></h2>
+			</figure>
+
+			
+
+		<div>
+			<h2 class="titulo-art">DESTINY</h2>
+			<h2 class="titulo2-art">DESTINY LO NUEVO PARA PS4 Y XBOX ONE</h2>
+		</div>
+		<div class="texto">
+			<p>Destiny is an action game from the creators of Halo, set in a mysterious future. Create a unique and powerful character, customize the way you look and fight, and explore what remains of our solar system.  
+
+
+				por:<a href="#">Rogerio</a>
+
+			</p>
+		</div>
+
+		</article>
+		<article class="art">
+			<figure class="imagen-art"> 
+				<img src="img/destiny_mid_img4.jpg" />
+				<h2 class="cinta-art"><p>EXCLUSIVA</p></h2>
+			</figure>
+
+			
+
+		<div>
+			<h2 class="titulo-art">DESTINY</h2>
+			<h2 class="titulo2-art">DESTINY LO NUEVO PARA PS4 Y XBOX ONE</h2>
+		</div>
+		<div class="texto">
+			<p>Destiny is an action game from the creators of Halo, set in a mysterious future. Create a unique and powerful character, customize the way you look and fight, and explore what remains of our solar system.  
+
+
+				por:<a href="#">Rogerio</a>
+
+			</p>
+		</div>
+
+		</article>
+
+
 	</section>
 
 
@@ -60,6 +185,10 @@
 			<strong>Powered by Ruby on Rails</strong>
 		</p>
 	</footer>
+
+
+	
+
 
 
 
