agrego carpeta material

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
 			<li><a href="#">Nintendo</a></li>
 			<li><a href="#">PcGamer</a></li>
 			<li><a href="#">SteamOs</a></li>
+			<li><a href="contacto.html">Contacto</a></li>
+
 			<li id="login"><a href="#">login</a></li>
 		</ul>
 	</nav>
@@ -182,7 +184,10 @@
 
 	<footer>
 		<p>
-			<strong>Powered by Ruby on Rails</strong>
+			<strong>Powered by Ruby on Rails®</strong>
+		</p>
+		<p>
+			canocu.com 2014
 		</p>
 	</footer>
 
